--- a/weeks/Makefile
+++ b/weeks/Makefile
@@ -3,6 +3,9 @@ output := $(input:.inp.md=.out.md )
 
 all: $(output)
 
-%.out.md: %.inp.md Makefile meta.yml
-	echo $(output)
-	pandoc --to=markdown --metadata-file=meta.yml $< -o $@
+%.out.md: %.inp.md Makefile meta.md
+	echo $@ from $<
+	pandoc --to=markdown meta.md $< -o $@
+
+clean:
+	rm *.out.md
