maybe handled projects

--- a/projects/Makefile
+++ b/projects/Makefile
@@ -1,2 +1,11 @@
-all:
-	echo FIXME
+input := $(wildcard *.inp.md)
+output := $(input:.inp.md=.out.md )
+
+all: $(output)
+
+%.out.md: %.inp.md Makefile meta.md
+	echo $@ from $<
+	pandoc --to=markdown meta.md $< -o $@
+
+clean:
+	rm *.out.md
